# openwfs

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Fourier.py  LICENCE.txt  README.md  README.rst  SLM_Scanning_test.py  SSA.py  STYLEGUIDE.md  WFS.py  WFS_functions.py  WFS_test.py  __init__.py  algorithm.py  autoconfig.py  deployment_checklist.md  feedback.py  fourier.py  geometry.py  main.py  patch.py  pyproject.toml  readme.md  requirements.txt  setup.py  shaders.py  slm.py  ssa.py  ssa2.py  textures.py  wfs.py  wfs_functions.py
.github/workflows/: black.yml  pypi.yml  pytest.yml  testpypi.yml
AutoConfig/: autoconfig.py
Characterisation/: Sample_characterisation.py  characterisation testing.py
Simulation/: Fourier_simulation.py  SSA_convergence.py  SSA_simulation.py  Simulation.py  Simulation_gif.py
algorithms/: __init__.py  fourier.py  ssa.py  ssa2.py
calibration/: calibrate.m  calibration.py
calibration/functions/: calibrate_matrices_acquisition.m  calibrate_matrices_processing.m  find_mean_shift.m  grabSIFrame.m  parabola.m  wiener_khinchin.m
calibration/tests/: example_find_mean_shift_with_std.m  test_SLM_parabola.m  test_shift_by_wiener_khinchin.m
docs/: algorithms.rst  api.rst  conf.py  core.rst  devices.rst  index.rst  make.bat  requirements.txt  simulation.rst  tex.bat  tex.sh
docs/source/: acknowledgements.rst  acknowledgments.rst  api.rst  api_algorithms.rst  api_core.rst  api_devices.rst  api_processors.rst  api_simulation.rst  api_slm.rst  api_utilities.rst  conclusion.rst  conf.py  coordinates.rst  core.rst  core_module.rst  detectors_and_actuators.rst  development.rst  examples.rst  index.rst  index_latex.rst  index_markdown.rst  micromanager.rst  modules.rst  openwfs.algorithms.rst  openwfs.devices.rst  openwfs.rst  openwfs.simulation.rst  openwfs.slm.rst  pydevice.rst  readme.rst  references.bib  simulation_tools.rst  simulations.rst  slm.rst  slms.rst  troubleshooting.rst  utilities.rst
examples/: Experiment-Daniel-samples-Carlotta-Jeroen.py  Fourier_simulation.py  README.md  README.rst  Simulating_microscope.ipynb  Simulation_gif.py  Zaber translation stage control.ipynb  acquire_pycro.py  calibration_demo_experimental.py  camera_live_view.py  camera_live_view_harvesters.py  control_pycromanager.py  coordinate_system_allignment.ipynb  example_camera.py  example_device.py  example_xystage.py  fourierwfs_experiment_daniel.py  functions.py  gain_galvo_scanner.py  galvo_scanner_devic.py  hello_simulation.py  hello_wfs.py  micro_manager_microscope.cfg  micro_manager_microscope.py  micro_manager_scanning_microscope.cfg  micro_manager_scanning_microscope.py  micro_manager_wfs.cfg  micro_manager_wfs.py  micro_wfs_demo.cfg  micro_wfs_demo.py  microscope_simulation_micromanager.py  minimal_working_ssa.py  mm_devices_fourierwfs.py  mm_scanning_microscope.cfg  mm_scanning_microscope.py  modelfourierwfs_experiment_daniel-edit.py  modelfourierwfs_experiment_daniel.py  modelfourierwfs_test_settings.py  modelwfs_experiment_daniel.py  sample_microscope.py  (+16 more)
examples/data/fourier_ssa_comparison/: README.md  optimised_wf_ssa.npy
examples/pydevice/: example_camera.py  example_device.py  example_xystage.py  example_zstage.py  microscope_simulation_micromanager.py  scanning_microscope.py  set_path.py
examples/wavefront_shaping_characterisation/: README.md  fourier_algorithms_comparison.py  functions.py  pathfinding_fourier_enhancement_prediction.py  pathfinding_fourier_stepping.py
feedback/: __init__.py  controller.py  processors.py
misc/: calibration.py
misc/functions/: SLM_parabola.m  acquire_parabola_data.m  acquire_parabola_data_residual.m  calculate_offset_in_peak.m  calibrate_matrices_acquisition.m  process_parabola_data.m  process_parabola_data_residual.m
misc/tests/: test_SLM_parabola.m  test_find_mean_shift.m
openwfs/: README.md  __init__.py  build_backend.py  core.py  plot_utilities.py  processors.py  utilities.py
openwfs/algorithms/: __init__.py  basic_fourier.py  custom_blind_dual_reference.py  custom_iter_dual_reference.py  dual_reference.py  fourier.py  genetic.py  new_fourier_proposal.py  no_overlap_fourier_base.py  pathfinding_fourier.py  pathfinding_fourier_demo.py  ssa.py  troubleshoot.py  utilities.py
openwfs/calibration/: __init__.py  fringe_analysis_slm_calibrator.py  inline_slm_calibrator.py
openwfs/devices/: Pyscanner.py  README.md  README.txt  __init__.py  camera.py  example_camera.py  example_device.py  example_xystage.py  example_zstage.py  gain.py  galvo_scanner.py  kcube_inertial.py  kcubeinertial.py  nidaq_gain.py  stages.py  wfs_device.py  zaber_stage.py
openwfs/devices/slm/: __init__.py  context.py  geometry.py  patch.py  (+3 more)
openwfs/feedback/: __init__.py  controller.py  processors.py
openwfs/processors/: __init__.py  hdrcamera.py  processors.py
openwfs/simulation/: Fourier_simulation.py  SSA_convergence.py  SSA_simulation.py  __init__.py  microscope.py  minimal_working_ssa.py  mockdevices.py  simulation.py  slm.py  slm_patterns.py  transmission.py
openwfs/slm/: __init__.py  context.py  geometry.py  patch.py  patterns.py  shaders.py  slm.py  texture.py
openwfs/utilities/: __init__.py  patterns.py  patterns_f.py  tests.py  utilities.py
pydevice/: AutoConfig.props  PyDevice.cpp  PyDevice.md  PyDevice.md.saved.bak  README.md
pydevice/AutoConfig/: autoconfig.py
simulation/: Fourier_simulation.py  SSA_convergence.py  SSA_simulation.py  Simulation_gif.py  __init__.py  microscope.py  minimal_working_ssa.py  mockdevices.py  simulation.py
slm/: __init__.py  main.py  patch.py  shaders.py  slm.py  texture.py
tests/: __init__.py  test_algorithms_troubleshoot.py  test_algorithms_utilities.py  test_algorithms_utilities_wfscontroller.py  test_camera.py  test_core.py  test_daq_scanner.py  test_detector.py  test_functions.py  test_kcube_inertial.py  test_mock_devices.py  test_patterns.py  test_processors.py  test_scanning_microscope.py  test_simulation.py  test_slm.py  test_transform.py  test_utilities.py  test_wfs.py  wfs_test.py  wfs_tests.py
tests/test_devices/: kcube_inertial.py
