[tool.poetry]
name = "openwfs"
version = "0.1.0rc3"
description = 'A libary for performing wavefront shaping experiments and simulations'
authors = ["Ivo Vellekoop <i.m.vellekoop@utwente.nl>", "Daniël Cox", "Jeroen Doornbos"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/ivovellekoop/openwfs"
documentation = "https://openwfs.readthedocs.io/en/latest/"
classifiers = [
    'Programming Language :: Python :: 3',
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
# required dependencies
python = ">=3.9,<4.0"
numpy = ">=1.25.2"  # also allow numpy 2.x.y
astropy = ">=5.1.0" # assuming the astropy.units is stable
opencv-python = "^4.9.0.80"
matplotlib = "^3.7.3"
scipy = "^1.11.3"
annotated-types = "^0.7.0"

# optional dependencies for hardware components
nidaqmx = { version = "^1.0.1", optional = true }
harvesters = { version = "^1.4.2", optional = true }
PyOpenGL = { version = "^3.1.7", optional = true }
glfw = { version = "^2.5.9", optional = true }

# optional dependencies for development and testing
scikit-image = { version = ">=0.21.0", optional = true }
pytest = { version = ">=7.0.0", optional = true }
black = { version = ">=24.0.0", optional = true } # code formatter
poetry = { version = ">=1.2.0", optional = true } # package manager

# optional dependenies for documentation building
sphinx = { verstion = ">=4.1.2", optional = true }
sphinx_mdinclude = { verstion = ">=0.5.0", optional = true }
sphinx-rtd-theme = { verstion = ">=2.0.0", optional = true }
sphinx-autodoc-typehints = { verstion = ">=2.2.0", optional = true }
sphinxcontrib-bibtex = { verstion = ">=2.6.0", optional = true }
sphinx-markdown-builder = { verstion = ">=0.6.6", optional = true }
sphinx-gallery = { verstion = ">=0.15.0", optional = true }


[tool.poetry.extras]
# optional dependencies for hardware components
# these are not required for the core functionality of the library
# to install, use pip install openwfs[nidaq, genicam]
# or poetry install --extras "nidaq" --extras "genicam"
nidaq = ["nidaqmx"]
genicam = ["harvesters"]
opengl = ["PyOpenGL", "glfw"]
dev = ["scikit-image", "pytest", "black", "poetry"]
doc = ["sphinx", "sphinx_mdinclude", "sphinx-rtd-theme", "sphinx-autodoc-typehints", "sphinxcontrib-bibtex", "sphinx-markdown-builder", "sphinx-gallery"]


[tool.black]
line-length = 120


