# Note: when developing openwfs, install the package as editable (this is done automatically by uv)
# This will create a special WHEEL that redirects all calls to the code files in the project.
# Changes in pyproject.toml, however, are not reflected in the project METADATA file.
# To make sure these changes are visible, use `uv build`.
[project]
name = "openwfs"
dynamic = ["version"] # auto-filled by scm-setuptools
description = "A library for performing wavefront shaping experiments and simulations"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Jeroen Doornbos" },
    { name = "Daniël Cox" },
    { name = "Arnon A. B."},
    { name = "Swapnil Mache"},
    { name = "Ivo Vellekoop", email = "i.m.vellekoop@utwente.nl" },
]
requires-python = ">=3.10,<4.0"
keywords = ["wavefront", "optics", "simulation", "microscopy", "hardware"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.25.2",
    "astropy>=6.0.0",
    "opencv-python>=4.9.0.80",
    "matplotlib>=3.7.3",
    "scipy>=1.11.3",
    "annotated-types>=0.7.0",
]

[project.optional-dependencies]
# Hardware-related extras
nidaq = ["nidaqmx>=1.0.1"]
genicam = ["harvesters>=1.4.2; python_version < '3.12'"]
opengl = ["PyOpenGL>=3.1.7", "glfw>=2.5.9"]
zaber = ["zaber-motion>=4.0.0", "pyserial>=3.5"]
thorlabs = ["pythonnet>=3.0.1"]
all = [
    "nidaqmx>=1.0.1",
    "harvesters>=1.4.2; python_version < '3.12'",
    "PyOpenGL>=3.1.7",
    "glfw>=2.5.9",
    "zaber-motion>=4.0.0",
    "pyserial>=3.5",
    "pythonnet>=3.0.1",
]

# Development & documentation groups
dev = [
    "pre-commit>=2.20.0",
    "scikit-image>=0.21.0",
    "pytest>=7.0.0",
    "nidaqmx>=1.0.1",
    "black>=25.1.0",
    "uv>=0.9.0",
]
docs = [
    "sphinx>=4.1.2",
    "sphinx_mdinclude>=0.5.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.2.0",
    "sphinxcontrib-bibtex>=2.6.0",
    "sphinx-markdown-builder==0.6.7",
    "sphinx-gallery>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/ivovellekoop/openwfs"
Documentation = "https://openwfs.readthedocs.io/en/latest/"
Repository = "https://github.com/ivovellekoop/openwfs"
Issues = "https://github.com/ivovellekoop/openwfs/issues"

[tool.black]
line-length = 120

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "openwfs/_version.py"
